--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -367,9 +367,15 @@ jobs:
     - name: package Mudlet
       if: (runner.os == 'Linux' || runner.os == 'macOS') && matrix.deploy == 'deploy'
       run: |
-       export ARCH=$(uname -m)
-       echo "ARCH=$ARCH" >> $GITHUB_ENV
-       ${{github.workspace}}/CI/travis.after_success.sh
+        export ARCH=$(uname -m)
+        echo "ARCH=$ARCH" >> $GITHUB_ENV
+        if [ "$RUNNER_OS" = "macOS" ] && [ "$ARCH" = "arm64" ]; then
+          # dblsqd only supports 'arm' as an architecture and not 'arm64'
+          echo "ARCH_DBLSQD=arm" >> $GITHUB_ENV
+        else
+          echo "ARCH_DBLSQD=$ARCH" >> $GITHUB_ENV
+        fi
+        ${{github.workspace}}/CI/travis.after_success.sh
       env:
         BUILD_FOLDER: ${{runner.workspace}}/b/ninja
         RUNNER_OS: ${{runner.os}}
