Fix: allow running PTB builds on demand (#7486)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
https://github.com/Mudlet/Mudlet/pull/7254 added the ability to run PTB
builds on demand for macOS and Linux, however that solution was
incomplete and didn't actually work in practice.

This fixes it to work.
#### Motivation for adding to Mudlet
So we can run PTBs on demand instead of waiting 24h between each run
when we need to debug something related to them.
#### Other info (issues closed, discussion etc)

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -266,6 +266,8 @@ jobs:
 
     - name: (Linux) Set build info
       if: runner.os == 'Linux'
+      env:
+        GITHUB_EVENT_INPUTS_SCHEDULED: ${{inputs.scheduled}}
       run: |
         sudo apt-get -y install pcregrep
         ${{github.workspace}}/CI/travis.validate_deployment.sh
@@ -273,6 +275,8 @@ jobs:
 
     - name: (macOS) Set build info
       if: runner.os == 'macOS'
+      env:
+        GITHUB_EVENT_INPUTS_SCHEDULED: ${{inputs.scheduled}}
       run: |
         brew install pcre
         ${{github.workspace}}/CI/travis.validate_deployment.sh
