--- a/.github/workflows/link-ptbs-to-dblsqd.yml
+++ b/.github/workflows/link-ptbs-to-dblsqd.yml
@@ -43,17 +43,18 @@ jobs:
         fi
 
         export LINUX_PTB_URL=$(cat $LATEST_FEED | jq --raw-output '.data[] | select(.platform == "linux" and (.url | contains("-ptb-"))) | .url')
-        export MACOS_X64_PTB_URL=$(cat $LATEST_FEED | jq --raw-output '.data[] | select(.platform == "macos" and (.url | contains("x86_64"))) | .url')
-        export MACOS_ARM64_PTB_URL=$(cat $LATEST_FEED | jq --raw-output '.data[] | select(.platform == "macos" and (.url | contains("arm64"))) | .url')
+        export MACOS_X64_PTB_URL=$(cat $LATEST_FEED | jq --raw-output '.data[] | select(.platform == "macos" and (.url | contains("x86_64")) and (.url | contains("-ptb-"))) | .url')
+        export MACOS_ARM64_PTB_URL=$(cat $LATEST_FEED | jq --raw-output '.data[] | select(.platform == "macos" and (.url | contains("arm64")) and (.url | contains("-ptb-"))) | .url')
 
         echo "Linux PTB link: $LINUX_PTB_URL"
-        echo "LINUX_PTB_URL=${LINUX_PTB_URL}" >> "$GITHUB_ENV"
-        
         echo "macOS x64 PTB link: $MACOS_X64_PTB_URL"
-        echo "MACOS_X64_PTB_URL=${MACOS_X64_PTB_URL}" >> "$GITHUB_ENV"
-
         echo "macOS ARM64 PTB link: $MACOS_ARM64_PTB_URL"
-        echo "MACOS_ARM64_PTB_URL=${MACOS_ARM64_PTB_URL}" >> "$GITHUB_ENV"
+
+        {
+          echo "LINUX_PTB_URL=${LINUX_PTB_URL}"
+          echo "MACOS_X64_PTB_URL=${MACOS_X64_PTB_URL}"
+          echo "MACOS_ARM64_PTB_URL=${MACOS_ARM64_PTB_URL}"
+        } >> "$GITHUB_ENV"
 
     - name: Setup dblsqd client
       run: |
