Add regex highlighting to triggers in script editor (#7523)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Adds highlighting to triggers in script editor using the chosen edbee
theme as a guide. Fallsback to default colours otherwise.

#### Motivation for adding to Mudlet
Better user experience, helps identify possible issues with regex
patterns.

#### Other info (issues closed, discussion etc)
closes #5641


![image](https://github.com/user-attachments/assets/ce70ca35-8b25-41e5-9e85-05f6bb2497f2)

![image](https://github.com/user-attachments/assets/1067e84e-9a21-46d3-95bb-eae0ce2cc816)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,21 @@
   "files.exclude": {
     "3rdparty/": true,
     ".cache": true,
+  },
+  "files.associations": {
+    "typeindex": "cpp",
+    "typeinfo": "cpp",
+    "string": "cpp",
+    "complex": "cpp",
+    "*.ipp": "cpp",
+    "optional": "cpp",
+    "ratio": "cpp",
+    "system_error": "cpp",
+    "array": "cpp",
+    "functional": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "variant": "cpp"
   }
 }
