Infrastructure: re-enable macOS code signing (#7491)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Replicate https://github.com/Mudlet/Mudlet/pull/7416 in our own fork
where the builds can be safely signed
#### Motivation for adding to Mudlet
Just to test that the PR works before we merge it. The original can't be
tested as it comes from a 3rd party repository.
#### Other info (issues closed, discussion etc)
Closes #7278

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -163,7 +163,7 @@ jobs:
         HOMEBREW_NO_INSTALL_CLEANUP: "ON"
       run: |
         # these aren't available or don't work well in vcpkg
-        BREWS=("libzzip" "libzip" "ccache" "luarocks" "expect" "mitchellh/gon/gon")
+        BREWS=("libzzip" "libzip" "ccache" "luarocks" "expect")
 
         # Loop through each brew package
         for brew in "${BREWS[@]}"; do
@@ -394,8 +394,9 @@ jobs:
         DBLSQD_PASS: ${{secrets.DBLSQD_PASS}}
         DEPLOY_KEY_PASS: ${{secrets.DEPLOY_KEY_PASS}}
         MACOS_SIGNING_PASS: ${{secrets.MACOS_SIGNING_PASS}}
-        AC_USERNAME: ${{secrets.APPLE_USERNAME}}
-        AC_PASSWORD: ${{secrets.APPLE_PASSWORD}}
+        APPLE_USERNAME: ${{secrets.APPLE_USERNAME}}
+        APPLE_PASSWORD: ${{secrets.APPLE_PASSWORD}}
+        APPLE_TEAM_ID: ${{secrets.APPLE_TEAM_ID}}
         TRIPLET: ${{matrix.triplet}}
 
     - name: Upload packaged Mudlet
