Infrastructure: Update sanitizers.cmake to latest upstream (#7415)
#### Brief overview of PR changes/additions
:crown: An automated PR to update the built-in
`3rdparty/cmake-scripts/sanitizers.cmake` to its latest version in
upstream. We don't include it as a submodule as we need just this one
file from the entire repo.
#### Motivation for adding to Mudlet
Latest version of the CMake utility feature that allows use to use
various CMake sanitizers via the `USE_SANITIZER` CMake variable.
#### Other info (issues closed, discussion etc)
_update triggered by refs/heads/development
829503f938ea3fdc9d2c825bf4cd4ae5fe3bb699_

---------

Co-authored-by: mudlet-machine-account <mudlet-machine-account@users.noreply.github.com>
Co-authored-by: Vadim Peretokin <vperetokin@hey.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -398,7 +398,20 @@ if(NOT "${USE_ALTERNATE_LINKER}" STREQUAL "")
   set_alternate_linker(${USE_ALTERNATE_LINKER})
 endif()
 
+# Enable sanitizers support
 include(../3rdparty/cmake-scripts/sanitizers.cmake)
+
+set_sanitizer_options(address DEFAULT -fno-omit-frame-pointer)
+set_sanitizer_options(thread DEFAULT -fno-omit-frame-pointer)
+
+set(MUDLET_SANITIZER
+      "address"
+      CACHE STRING
+      "Compile with sanitizers. Available sanitizers are: Address, Memory, MemoryWithOrigins, Undefined, Thread, or Leak")
+
+add_sanitizer_support(${MUDLET_SANITIZER})
+message(STATUS "Compiling with the following sanitizer(s) enabled: ${MUDLET_SANITIZER}")
+
 
 if(WITH_QT6)
 find_package(
