Infrastructure: rename MUDLET_SANITIZIER variable back to USE_SANITIZER (#7585)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Rename MUDLET_SANITIZIER variable back to USE_SANITIZER
#### Motivation for adding to Mudlet
Alignment with other `USE_` settings, see 

![image](https://github.com/user-attachments/assets/b2fcbc4e-fb1e-4c3a-b228-3d1c64e60934)

#### Other info (issues closed, discussion etc)
See https://github.com/google/sanitizers/wiki/AddressSanitizer

---------

Co-authored-by: Vadim Peretokin <vadi2@users.noreply.github.com>

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -306,6 +306,7 @@ jobs:
           -G Ninja
           -DCMAKE_PREFIX_PATH=${{ env.QT_PREFIX != '' && env.QT_PREFIX || env.MINGW_BASE_DIR }}
           -DVCPKG_APPLOCAL_DEPS=OFF
+          -DUSE_SANITIZER=""
       env:
         NINJA_STATUS: '[%f/%t %o/sec] '
 
