Infrastructure: disable address sanitizer in performance tests (#7588)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Disable address sanitizer in performance tests
#### Motivation for adding to Mudlet
We have false positives from Qt and known leaks that we need to address
first before enabling this.
#### Other info (issues closed, discussion etc)

--- a/.github/workflows/performance-analysis.yml
+++ b/.github/workflows/performance-analysis.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Build Mudlet
       run : |
-        WITH_UPDATER=NO WITH_3DMAPPER=NO cmake -DCMAKE_BUILD_TYPE=Release -S${{github.workspace}} -B${{github.workspace}}/build -G Ninja
+        WITH_UPDATER=NO WITH_3DMAPPER=NO cmake -DCMAKE_BUILD_TYPE=Release -DUSE_SANITIZER="" -S${{github.workspace}} -B${{github.workspace}}/build -G Ninja
         cd ${{github.workspace}}/build
         ninja -j $(expr `nproc` - 1)
         tree
