Infrastructure: update minimum cmake to 3.25.1 (#7287)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Update minimum cmake to 3.25.1, which is the highest available version
in Debian stable: https://packages.debian.org/stable/cmake
#### Motivation for adding to Mudlet
Open the door to modernizing our cmake files and reducing complexity
within them.
#### Other info (issues closed, discussion etc)
See
https://hsf-training.github.io/hsf-training-cmake-webpage/aio/index.html,
https://cliutils.gitlab.io/modern-cmake on how modern cmake should be
done.

---------

Co-authored-by: Vadim Peretokin <vadi2@users.noreply.github.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -517,6 +517,11 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_executable(mudlet ${mudlet_SRCS} ${mudlet_RCCS} ${mudlet_HDRS} ${mudlet_UIS})
 
+# Enable symbol exports from the main executable so that dynamically loaded Lua modules
+# can find and use Lua API symbols (like lua_gettop) at runtime. Without this, modules
+# will fail to load with "undefined symbol" errors.
+set_target_properties(mudlet PROPERTIES ENABLE_EXPORTS ON)
+
 ########################### Debugging code inclusions ##########################
 # Controls the include/selection of extra code to aide developers debug various
 # features of Mudlet, generally speaking they will not be '#define'd in
