--- a/.github/workflows/performance-analysis.yml
+++ b/.github/workflows/performance-analysis.yml
@@ -27,6 +27,9 @@ jobs:
         fetch-depth: 0
         submodules: true
 
+    - name: Use CMake 3.30.3
+      uses: lukka/get-cmake@v3.30.3
+
       # run-vcpkg action does not run on arm64 (https://github.com/lukka/run-vcpkg/issues/152)
       # so install dependencies manually
     - name: Install dependencies
