Infrastructure: replace Q_OS_WIN32 with Q_OS_WINDOWS (#7619)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Replace Q_OS_WIN32 macro with Q_OS_WINDOWS.
#### Motivation for adding to Mudlet
We're not really checking for 32bit Windows here - these checks apply
[both for 32bit and
64bit](https://doc.qt.io/qt-5/qtglobal.html#Q_OS_WIN32).
#### Other info (issues closed, discussion etc)

Co-authored-by: Vadim Peretokin <vadi2@users.noreply.github.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -606,7 +606,7 @@ if(USE_OWN_QTKEYCHAIN)
 endif()
 
 # Used to force an include of winsock2.h BEFORE Qt tries to include winsock.h
-# from windows.h - only needed on Windows builds but we cannot use Q_OS_WIN32
+# from windows.h - only needed on Windows builds but we cannot use Q_OS_WINDOWS
 # for an #ifdef because we need a symbol that is defined BEFORE we include
 # any Qt header file!
 if(WIN32)
