Infrastructure: add `enums.h` (#7646)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Add `enums.h` where we can add enums and flags to be used throughout the
application that don't have a more specific place to be, without
dragging in giant classes such as mudlet.h or Host.h.

Also added `enums::PackageModuleType` to track the magic numbers used
throughout package/module code :rocket:
#### Motivation for adding to Mudlet
Simplify code organisation.
#### Other info (issues closed, discussion etc)

---------

Co-authored-by: Vadim Peretokin <vadi2@users.noreply.github.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -364,7 +364,8 @@ set(mudlet_HDRS
     VarUnit.h
     widechar_width.h
     XMLexport.h
-    XMLimport.h)
+    XMLimport.h
+    enums.h)
 
 if(WIN32)
   list(APPEND mudlet_HDRS uiawrapper.h)
