--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #    Copyright (C) 2014-2017 by Ahmed Charles - acharles@outlook.com       #
-#    Copyright (C) 2015-2018, 2020, 2023 by Stephen Lyons                  #
+#    Copyright (C) 2015-2018, 2020, 2023, 2025 by Stephen Lyons            #
 #                                                - slysven@virginmedia.com #
 #    Copyright (C) 2018 by Huadong Qi - novload@outlook.com                #
 #    Copyright (C) 2022 by Thiago Jung Bauermann - bauermann@kolabnow.com  #
@@ -420,23 +420,22 @@ add_sanitizer_support(${USE_SANITIZER})
 message(STATUS "Compiling with the following sanitizer(s) enabled: ${USE_SANITIZER}")
 
 
-if(WITH_QT6)
-find_package(
-  Qt6 6.2.0 REQUIRED
-  COMPONENTS Core
-             Multimedia
-             Network
-             OpenGL
-             UiTools
-             Widgets
-             Concurrent
-             Core5Compat)
-  find_package(Qt6 COMPONENTS TextToSpeech QUIET)
+find_package(Qt6 6.4.0 REQUIRED
+    COMPONENTS Core
+               Multimedia
+               Network
+               OpenGL
+               UiTools
+               Widgets
+               Concurrent
+               Core5Compat)
 
-  message(STATUS "Qt version: ${Qt6Core_VERSION}")
+find_package(Qt6 COMPONENTS TextToSpeech QUIET)
 
-  set(QT_MAJOR_VERSION 6)
-  set(QT_LIBS Qt6::Concurrent
+message(STATUS "Qt version: ${Qt6Core_VERSION}")
+
+set(QT_MAJOR_VERSION 6)
+set(QT_LIBS Qt6::Concurrent
               Qt6::Core
               Qt6::Network
               Qt6::Multimedia
@@ -446,38 +445,9 @@ find_package(
               Qt6::Core5Compat
               qt6keychain)
 
-  if(Qt6TextToSpeech_FOUND)
-    list(APPEND QT_LIBS Qt6::TextToSpeech)
-    message(STATUS "Using TextToSpeech module")
-  endif()
-else()
-  find_package(
-          Qt5 5.14 REQUIRED
-          COMPONENTS Core
-          Multimedia
-          Network
-          OpenGL
-          UiTools
-          Widgets
-          Concurrent)
-  find_package(Qt5 COMPONENTS TextToSpeech QUIET)
-
-  message(STATUS "Qt version: ${Qt5Core_VERSION}")
-
-  set(QT_MAJOR_VERSION 5)
-  set(QT_LIBS Qt5::Concurrent
-              Qt5::Core
-              Qt5::Network
-              Qt5::Multimedia
-              Qt5::OpenGL
-              Qt5::UiTools
-              Qt5::Widgets
-              qt5keychain)
-
-  if(Qt5TextToSpeech_FOUND)
-    list(APPEND QT_LIBS Qt5::TextToSpeech)
-    message(STATUS "Using TextToSpeech module")
-  endif()
+if(Qt6TextToSpeech_FOUND)
+  list(APPEND QT_LIBS Qt6::TextToSpeech)
+  message(STATUS "Using TextToSpeech module")
 endif()
 
 message(STATUS "Using ${CMAKE_CXX_COMPILER_ID} compiler")
