Improve: add Noto-Color-Emoji font support to FreeBSD builds (#7710)
#### Brief overview of PR changes/additions
Extends the use of Noto-Color-Emoji to provide Emojis to the FreeBSD OS
as well as the GNU/Linux one.

#### Motivation for adding to Mudlet
I've recently discovered that FreeBSD now supports the display of colour
fonts (at least the type that this font is) so wanted them to be used.

#### Other info (issues closed, discussion etc)
I've renamed the Qt resource file that bundles the Noto-Color-Emoji font
to reflect the fact that it is now usable for more than just GNU/Linux.

Signed-off-by: Stephen Lyons <slysven@virginmedia.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,8 +31,8 @@ endif()
 
 if(USE_FONTS)
   list(APPEND mudlet_RCCS mudlet_fonts_common.qrc)
-  if(CMAKE_SYSTEM_NAME STREQUAL Linux)
-    list(APPEND mudlet_RCCS mudlet_fonts_linux.qrc)
+  if(CMAKE_SYSTEM_NAME STREQUAL Linux OR CMAKE_SYSTEM_NAME STREQUAL FreeBSD)
+    list(APPEND mudlet_RCCS mudlet_fonts_posix.qrc)
   endif()
 endif()
 
