Add: Video capability for MCMP and Lua API (PR 1 of 2) (#7706)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions

Groundwork for playing videos, minus the visual elements, which will
come in the next PR.

Adding:
- GMCP capability to play videos via the Mud Client Media Protocol
- Lua API loadVideoFile()
- Lua API playVideoFile()
- Lua API getPlayingVideos()
- Lua API stopVideos()

Stream a video
```lua
lua playVideoFile({
    name = "TextInMotion-VideoSample-1080p.mp4"
    , url = "https://d2qguwbxlx1sbt.cloudfront.net/"
    , stream = true
})
```
Download/play a video
```lua
lua playVideoFile({
    name = "TextInMotion-VideoSample-1080p.mp4"
    , url = "https://d2qguwbxlx1sbt.cloudfront.net/"
})

OR

lua playVideoFile({
    name = "TextInMotion-VideoSample-1080p.mp4"
    , url = "https://d2qguwbxlx1sbt.cloudfront.net/"
    , stream = false
})
```
Stop playing the video
```lua
lua stopVideos({
    name = "TextInMotion-VideoSample-1080p.mp4"
})
```
Preload a video to play later
```lua
lua loadVideoFile({
    name = "TextInMotion-VideoSample-1080p.mp4"
    , url = "https://d2qguwbxlx1sbt.cloudfront.net/"
})
```

#### Motivation for adding to Mudlet

Bridging the gap to draw new players into text gaming.

#### Other info (issues closed, discussion etc)

Another PR will follow with UI components to support using the
capability added in this one.


https://github.com/user-attachments/assets/df076222-3a8f-422c-bd53-37580386245b

---------

Co-authored-by: Stephen Lyons <slysven@virginmedia.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -419,10 +419,10 @@ set(USE_SANITIZER
 add_sanitizer_support(${USE_SANITIZER})
 message(STATUS "Compiling with the following sanitizer(s) enabled: ${USE_SANITIZER}")
 
-
 find_package(Qt6 6.4.0 REQUIRED
     COMPONENTS Core
                Multimedia
+               MultimediaWidgets
                Network
                OpenGL
                UiTools
@@ -439,6 +439,7 @@ set(QT_LIBS Qt6::Concurrent
               Qt6::Core
               Qt6::Network
               Qt6::Multimedia
+              Qt6::MultimediaWidgets
               Qt6::OpenGL
               Qt6::UiTools
               Qt6::Widgets
